# UltimateGolf19XX

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md
assets/: Thumbs.db
assets/Audio/: GolfBallHit.txt  Water.txt
assets/CGTextures/: Thumbs.db
assets/Models/GolfBall/: Readme.txt
assets/Terrain/: Thumbs.db
shaders/: Blendmap.frag  Default2D.vert  Default3D.frag  Default3D.geom  Default3D.vert  Deferred.frag  ForwardAlpha.frag  NormalSpecularMap.frag  Post.vert  PostColor.frag  PostCopy.frag  PostFXAA.frag  Skybox.frag  Skybox.vert  Texture2D.frag  Water.frag  Water.geom
src/Core/: GameWindow.cpp  GameWindow.hpp  RenderTarget.cpp  RenderTarget.hpp  Resources.cpp  Resources.hpp  Skybox.cpp  Skybox.hpp
src/Core/Audio/: Listener.cpp  Listener.hpp  Sound.cpp  Sound.hpp  SoundBuffer.cpp  SoundBuffer.hpp  SoundFile.hpp  SoundSystem.cpp  SoundSystem.hpp  VorbisFile.cpp  VorbisFile.hpp  WaveFile.cpp  WaveFile.hpp
src/Core/Camera/: Camera.cpp  Camera.hpp  FirstPersonCamera.cpp  FirstPersonCamera.hpp
src/Core/Font/: Font.hpp
src/Core/Geometry/: Cube.cpp  Cube.hpp  Geometry2D.hpp  Geometry3D.cpp  Geometry3D.hpp  Model.cpp  Model.hpp  OBJModel.cpp  OBJModel.hpp  Rectangle.cpp  Rectangle.hpp  Square.cpp  Square.hpp  Terrain.cpp  Terrain.hpp
src/Core/IntersectionTesting/: AABB.cpp  AABB.hpp  Frustum.cpp  Frustum.hpp  OBB.cpp  OBB.hpp  Ray.cpp  Ray.hpp  Rectangle2D.cpp  Rectangle2D.hpp  Triangle.cpp  Triangle.hpp
src/Core/Lighting/: DeferredLighting.cpp  DeferredLighting.hpp  Light.cpp  Light.hpp
src/Core/Object/: Duck.cpp  Duck.hpp  GUI.cpp  GUI.hpp  GeometryObject.cpp  GeometryObject.hpp  GolfBall.cpp  GolfBall.hpp  LilyPad.cpp  LilyPad.hpp  ModelObject.cpp  ModelObject.hpp  Object.cpp  Object.hpp  PlayerObject.cpp  PlayerObject.hpp  TerrainObject.cpp  TerrainObject.hpp  Water.cpp  Water.hpp
src/Core/Particles/: CuboidParticleEmitter.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp  ParticleSystem.cpp  ParticleSystem.hpp  ParticleType.hpp  PointParticleEmitter.hpp
src/Core/Physics/: AABB.cpp  AABB.hpp  Frustum.cpp  Frustum.hpp  OBB.cpp  OBB.hpp  Ray.cpp  Ray.hpp  Rectangle2D.cpp  Rectangle2D.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
src/Core/Player/: FirstPersonPlayer.cpp  FirstPersonPlayer.hpp  Player.cpp  Player.hpp  ThirdPersonPlayer.cpp  ThirdPersonPlayer.hpp
src/Core/PostProcessing/: ColorFilter.cpp  ColorFilter.hpp  FXAAFilter.cpp  FXAAFilter.hpp  Filter.hpp  PostProcessing.cpp  PostProcessing.hpp
src/Core/Scene/: Scene.cpp  Scene.hpp  TestScene.cpp  TestScene.hpp
src/Core/Shader/: Shader.hpp  ShaderProgram.hpp
src/Core/Texture/: CubeMapTexture.cpp  CubeMapTexture.hpp  Texture.hpp  Texture2D.hpp
src/Core/Util/: FileSystem.hpp  GameSettings.cpp  GameSettings.hpp  Input.cpp  Input.hpp  Log.cpp  Log.hpp  Settings.hpp
src/Editor/: EditorWindow.cpp  EditorWindow.hpp  editor.cpp  editor.hpp
src/Editor/GUI/: Button.hpp  Container.hpp  HorizontalLayout.hpp  ImageButton.hpp  ImageTextButton.hpp  SelectHymnWindow.cpp  SelectHymnWindow.hpp  TextField.hpp  VerticalLayout.hpp  Widget.hpp
src/Editor/Util/: EditorSettings.cpp  EditorSettings.hpp
src/Game/: game.cpp  game.hpp
